tools/node/tests/snapshots/versions_test__node_tool__pin_version__inserts_when_missing.snap
---
source: tools/node/tests/versions_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "devEngines": {
    "runtime": {
      "name": "node",
      "version": ">=20"
    }
  }
}
